# ncnn

./: CMakeLists.txt
demo/: CMakeLists.txt  README.md
demo/executor/: io_utils.cpp  io_utils.h  memory_tracker.cpp  memory_tracker.h  ncnn_executor.cpp  ncnn_executor.h  run_config.h
demo/output/run1/: input_0.json  stats.json
demo/scripts/: benchmark_presets.sh  build_demo.cmd  build_demo.sh  demo_config.sh  run_demo.sh  run_demo_android.sh
demo/scripts/demo/output/run1/: input_0.json  output_0.json  stats.json
demo/test/: inference_test_case.cpp  inference_test_case.h  inference_test_main.cpp
src/layer/arm/: hardsigmoid_arm_asimdhp.cpp  hardswish_arm_asimdhp.cpp  swish_arm.cpp  swish_arm_asimdhp.cpp
src/layer/vulkan/: convolutiondepthwise_vulkan.cpp  convolutiondepthwise_vulkan.h
src/layer/vulkan/shader/: convolutiondepthwise_pack4_3x3s1d1.comp
tests/: test_convolutiondepthwise_vulkan_slidingwindow.cpp
tests/perf/: CMakeLists.txt  perf_convolutiondepthwise_vulkan_slidingwindow.cpp  perf_swish_compare.cpp
